Fix example app (#24)
* Fix env vars

* Update Dockerfile